--- a/_data/api/assets.yaml
+++ b/_data/api/assets.yaml
@@ -41,7 +41,7 @@ paths:
             #     value: '"logo=talentals.png"'
       responses:
         '200':
-          description: If needs refresh all clients to apply changes immediately.
+          description: Set an asset by name. Requires `manage-assets` permission.
           content:
             application/json:
               schema:
