[Week3 Day5 and 6] - Improve templates and example template created

--- a/_data/api/assets.yaml
+++ b/_data/api/assets.yaml
@@ -30,7 +30,7 @@ paths:
               properties:
                 assetName:
                   type: string
-                  example: myLogo
+                  example: myLogo.png
                   description: Asset File to upload.
                 refreshAllClients:
                   type: boolean
