extension of playground

--- a/_data/api/channels.yaml
+++ b/_data/api/channels.yaml
@@ -474,7 +474,7 @@ paths:
             #       }
       responses:
         '200':
-          description: Auto generated using Swagger Inspector
+          description: ''
           content:
             application/json:
               schema:
