--- a/_data/api/miscellaneous.yml
+++ b/_data/api/miscellaneous.yml
@@ -122,7 +122,7 @@ paths:
         - url: 'http://localhost:3000'
     servers:
       - url: 'http://localhost:3000'
-  /api/info:
+  /api/v1/info:
     get:
       description: Information about the Rocket.Chat server.
       responses:
