--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,8 @@ description: Rocket.Chat user, admin, API, integration, plugin and contributing 
 # leave trailing slash off
 url: https://rocket.chat/docs
 
+baseurl: ""
+
 # bump if alterting styles or js
 version: 41
 
