--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: "Rocket.Chat Documentation"
 description: Rocket.Chat user, admin, API, integration, plugin and contributing documentation.
 
 # leave trailing slash off
-url: https://rocket.chat/docs
+url: https://rodriq.github.io/GSoC-2019-Interactive-APIs-Docs
 
 # bump if alterting styles or js
 version: 41
